fixed title on mobile

--- a/style.css
+++ b/style.css
@@ -117,7 +117,6 @@ body{
     ". ."; 
 }
 .result__title{
-  margin-top:20px;
   font-size: 28px;
   font-weight: 600;
   font-family: 'Herculanum';
@@ -185,5 +184,8 @@ input[type=number] {
   .main__submit{
     width:60vw;
     align-self: center;
+  }
+  .result__title{
+    margin-top:20px;
   }
   }
